# koledin_scrum

./: .env  .gitignore  Makefile  README.md  alembic.ini  data_for_postgre.sql  pyproject.toml  requirements.txt
app/: config.py  database.py  main.py  models.py  shemas.py
app/BaseService/: BaseService.py
app/crud/: base.py
app/favorites/: crud.py  models.py  router.py  service.py  shemas.py
app/frontend/static/css/: style.css
app/frontend/static/js/: auth.js  cart.js  catalog.js  main.js  product.js
app/frontend/templates/: cart.html  catalog.html  index.html  login.html  product.html  profile.html
app/migrations/: env.py
app/migrations/versions/: 108964eb1f30_innitial_migration.py
app/orders/: crud.py  dependencies.py  models.py  router.py  service.py  shemas.py
app/pages/: router.py
app/products/: crud.py  dependencies.py  models.py  router.py  shemas.py
app/tests/: conftest.py  mock_favorites.json  mock_order_items.json  mock_orders.json  mock_products.json  mock_users.json
app/tests/unit_tests/products_test/: api_test.py
app/users/: auth.py  crud.py  dependencies.py  models.py  router.py  shemas.py
